Fix some ugly layout problems

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
   font-family: 'Courier New', Courier, monospace;
   margin: 0;
   padding: 20px;
-  line-height: 1.5;
 }
 
 /* Styling for the main editable container */
@@ -22,6 +21,7 @@ body {
   margin-top: 10px;
   overflow-wrap: break-word;
   white-space: pre-wrap;
+  line-height: 1;
 }
 
 /* Container for each staff (canvases + buttons) */
@@ -31,6 +31,7 @@ body {
   margin: 0 0;
   /* Prevent selecting the container itself */
   user-select: none;
+  height: 64px;
 }
 
 /* Style for BOTH canvases (background lines and foreground drawing) */
